<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/backface"
    android:layout_marginBottom="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="5"
                app:iss_delay="0"
                app:iss_period="5000"
                app:iss_text_color="#00000000"
                app:iss_title_background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ABOUT US"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="#2B2929"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AIMS"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aims"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="#2B2929"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OBJECTIVES"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objective"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="#2B2929"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LEARNING POLICY"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:gravity="center"
                android:text="@string/policy"
                android:textColor="#2B2929"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:layout_marginTop="36dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="#2B2929"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Howrah,West Bengal"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="#2B2929"/>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/map"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>