<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backface"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ScoreActivity">



<!--    <LinearLayout-->
<!--        android:id="@+id/name_bar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_margin="10dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/score_toolbar"-->
<!--        tools:layout_editor_absoluteX="10dp">-->

<!--        <TextView-->
<!--            android:layout_width="190dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="start"-->
<!--            android:text="Name"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold" />-->

<!--        <TextView-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:text="Roll No"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold" />-->

<!--        <TextView-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:text="Section"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold" />-->


<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_margin="10dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/name_bar">-->

<!--        <TextView-->
<!--            android:id="@+id/name"-->
<!--            android:layout_width="195dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold" />-->

<!--        <TextView-->
<!--            android:id="@+id/roll"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold" />-->

<!--        <TextView-->
<!--            android:id="@+id/section"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold" />-->


<!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/score_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_toolbar">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageView11"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="trophy.json"
            app:lottie_loop="true"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"/>

        <TextView
            android:id="@+id/your_score_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score_is"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_score_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="TextView"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/your_score_tv"
            app:layout_constraintStart_toStartOf="@+id/your_score_tv"
            app:layout_constraintTop_toBottomOf="@+id/your_score_tv" />

        <TextView
            android:id="@+id/out_of_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/out_of"
            android:textColor="#FF1605"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_score_tv" />

        <TextView
            android:id="@+id/total_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="10"
            android:textColor="#F31302"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/out_of_tv"
            app:layout_constraintStart_toStartOf="@+id/out_of_tv"
            app:layout_constraintTop_toBottomOf="@+id/out_of_tv" />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/done"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:textColorHint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_score_tv" />


    </LinearLayout>


</LinearLayout>